# DPITunnel-cli

./: 01_setup_build_env.sh  02_build_static_libnl3.sh  03_build_static_alpine.sh  CMakeLists.txt  README.md  autoconf.cpp  build_static_alpine.sh  desync.cpp  dns.cpp  dpitunnel-cli.cpp  dpitunnel.cpp  dpitunnel.service  netiface.cpp  packet.cpp  profiles.cpp  socket.cpp  ssl.cpp  utils.cpp
.github/scripts/: build.sh
.github/workflows/: build.yml  cd.yml  ci.yml
RawSocket/: CheckSum.cpp
cmake/Modules/: FindLibNL.cmake
dnslib/: buffer.cpp
include/: dpitunnel.h  profiles.h
